<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>egitmen_islemleri</class>
 <widget class="QMainWindow" name="egitmen_islemleri">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>363</width>
    <height>199</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Öğretmen işlemleri</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>811</width>
      <height>381</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(17, 57, 70);</string>
    </property>
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>79</y>
       <width>331</width>
       <height>101</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QPushButton" name="add_teacher_btn">
        <property name="styleSheet">
         <string notr="true">background-color: rgb(17, 57, 70);
font: 75 14pt &quot;MS Shell Dlg 2&quot;;
background-color: rgb(0, 170, 0);
color: rgb(255, 255, 255);</string>
        </property>
        <property name="text">
         <string>Ekleme</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="delete_teacher_btn">
        <property name="styleSheet">
         <string notr="true">background-color: rgb(17, 57, 70);
background-color: rgb(255, 0, 4);
font: 75 14pt &quot;MS Shell Dlg 2&quot;;
color: rgb(255, 255, 255);</string>
        </property>
        <property name="text">
         <string>Silme</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="edit_teacher_btn">
        <property name="styleSheet">
         <string notr="true">font: 75 14pt &quot;MS Shell Dlg 2&quot;;
background-color: rgb(0, 0, 255);
color: rgb(255, 255, 255);</string>
        </property>
        <property name="text">
         <string>Değiştirme</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>50</x>
       <y>20</y>
       <width>261</width>
       <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>20</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Öğretmen işlemleri</string>
     </property>
    </widget>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
